--- a/index.ipynb
+++ b/index.ipynb
@@ -25,11 +25,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.55"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your solution here "
+    "# Your solution here \n",
+    ".5 * .4 + .5 * .7"
    ]
   },
   {
@@ -63,14 +75,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "({'marbles': array(['white', 'black'], dtype='<U5'),\n",
+       "  'probs': array([0.6, 0.4])},\n",
+       " {'marbles': array(['white', 'black'], dtype='<U5'),\n",
+       "  'probs': array([0.3, 0.7])},\n",
+       " {'bags': array([{'marbles': array(['white', 'black'], dtype='<U5'), 'probs': array([0.6, 0.4])},\n",
+       "         {'marbles': array(['white', 'black'], dtype='<U5'), 'probs': array([0.3, 0.7])}],\n",
+       "        dtype=object), 'probs': array([0.5, 0.5])})"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
-    "bag1 = None\n",
-    "bag2 = None\n",
-    "box  = None\n",
+    "bag1 = {'marbles': np.array(['white', 'black']), 'probs': np.array([.6, .4])}\n",
+    "bag2 = {'marbles': np.array(['white', 'black']), 'probs': np.array([.3, .7])}\n",
+    "box  = {'bags': np.array([bag1, bag2]), 'probs': np.array([.5, .5])}\n",
     "\n",
     "bag1, bag2, box\n",
     "\n",
@@ -94,17 +123,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'marbles': array(['white', 'black'], dtype='<U5'), 'probs': array([0.3, 0.7])}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "box['bags'][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'white'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def sample_marble(box):\n",
     "    # randomly choose a bag \n",
+    "    bag = np.random.choice(box['bags'], p = box['probs'])\n",
     "   \n",
     "    # randomly choose a marble \n",
-    "    return none\n",
+    "    marble = np.random.choice(bag['marbles'], p = bag['probs'])\n",
+    "    return marble\n",
     "\n",
-    "#sample_marble(box)\n",
+    "sample_marble(box)\n",
     "# 'black' OR 'white'"
    ]
   },
@@ -117,14 +179,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "def probability_of_color(color, box, num_samples=1000):\n",
     "    # get a bunch of marbles \n",
+    "    tot = 0\n",
+    "    for i in range(1, num_samples + 1):\n",
+    "        if sample_marble(box) == color:\n",
+    "            tot += 1\n",
     "    # compute fraction of marbles of desired color \n",
-    "    return none"
+    "    return np.round(tot / num_samples, 4)"
    ]
   },
   {
@@ -136,23 +202,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5521"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# probability_of_color(\"black\", box, num_samples=100000)\n",
+    "probability_of_color(\"black\", box, num_samples=100000)\n",
     "\n",
     "\n",
     "# very close to 0.55"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Comment on your answer"
+    "The results align with what was expected."
    ]
   },
   {
@@ -171,11 +246,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3333333333333333"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your Solution here "
+    "# Your Solution here \n",
+    "(2/3) * (5/15) + (1/3) * (5/15)"
    ]
   },
   {
@@ -187,20 +274,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "({'marbles': array(['white', 'black', 'gray'], dtype='<U5'),\n",
+       "  'probs': array([0.4       , 0.26666667, 0.33333333])},\n",
+       " {'marbles': array(['white', 'black', 'gray'], dtype='<U5'),\n",
+       "  'probs': array([0.2       , 0.46666667, 0.33333333])},\n",
+       " {'bags': array([{'marbles': array(['white', 'black', 'gray'], dtype='<U5'), 'probs': array([0.4       , 0.26666667, 0.33333333])},\n",
+       "         {'marbles': array(['white', 'black', 'gray'], dtype='<U5'), 'probs': array([0.2       , 0.46666667, 0.33333333])}],\n",
+       "        dtype=object), 'probs': array([0.66666667, 0.33333333])})"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Change above code here "
+    "# Change above code here \n",
+    "bag1 = {'marbles': np.array(['white', 'black', 'gray']), 'probs': np.array([6/15, 4/15, 5/15])}\n",
+    "bag2 = {'marbles': np.array(['white', 'black', 'gray']), 'probs': np.array([3/15, 7/15, 5/15])}\n",
+    "box  = {'bags': np.array([bag1, bag2]), 'probs': np.array([2/3, 1/3])}\n",
+    "\n",
+    "bag1, bag2, box"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3312"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# probability_of_color(\"gray\", box, num_samples=100000)\n",
+    "probability_of_color(\"gray\", box, num_samples=100000)\n",
     "\n",
     "\n",
     "\n",
@@ -208,12 +328,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Record your comments "
+    "The reality aligns with the expectations."
    ]
   },
   {
@@ -242,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
